--- a/src/components/Carousel.css
+++ b/src/components/Carousel.css
@@ -1,1 +1,39 @@
 /* write your carousel css in this file */
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 40%;
+}
+
+.button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 65vh;
+    width: 5%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+}
+
+.text-container {
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.text-container h1 {
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 10px;
+    font-size: 2.5em;
+}
+
+.text-container p {
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.7);
+    font-size: 1.3em;
+    font-weight: 600;
+}
